ECP.OrderAnalyserService/k8s/02service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-analy-service
  namespace: ecp-dev
  labels:
    app: order-analy-service
spec:
  type: ClusterIP
  selector:
    app: order-analy-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
#  sessionAffinity: None
